--- a/typescript/tutorial/package.json
+++ b/typescript/tutorial/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learn-typescript-tutorial",
   "version": "1.0.0",
-  "description": "",
+  "description": "- [https://www.typescriptlang.org/docs/tutorial.html](https://www.typescriptlang.org/docs/tutorial.html)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
