--- a/template-engine/hogan/package.json
+++ b/template-engine/hogan/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "hogan.js": "^3.0.2"
+  }
 }
