--- a/javascript/chai/package.json
+++ b/javascript/chai/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "chai": "^4.0.2"
+  }
 }
