--- a/javascript/power-assert/package.json
+++ b/javascript/power-assert/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "power-assert": "^1.4.4"
+  }
 }
