--- a/javascript/karma/package.json
+++ b/javascript/karma/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "karma": "^1.7.0"
+  }
 }
