--- a/javascript/karma/package.json
+++ b/javascript/karma/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "",
   "devDependencies": {
-    "karma": "^1.7.0"
+    "jasmine-core": "^2.6.3",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-jasmine": "^1.1.0"
   }
 }
