--- a/javascript/karma/package.json
+++ b/javascript/karma/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "karma": "karma",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "",
@@ -14,6 +14,7 @@
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.1.1",
     "karma-jasmine": "^1.1.0",
-    "karma-mocha": "^1.3.0"
+    "karma-mocha": "^1.3.0",
+    "mocha": "^3.4.2"
   }
 }
