--- a/javascript/karma/package.json
+++ b/javascript/karma/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "karma": "karma",
-    "test": "mocha"
+    "test": "karma start"
   },
   "author": "",
   "license": "",
@@ -15,6 +14,7 @@
     "karma-chrome-launcher": "^2.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.3.0",
+    "karma-webpack": "^2.0.3",
     "mocha": "^3.4.2"
   }
 }
