--- a/javascript/testem/package.json
+++ b/javascript/testem/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "testem": "^1.16.2"
+  }
 }
