--- a/javascript/testem/package.json
+++ b/javascript/testem/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "mocha": "^3.4.2",
+    "power-assert": "^1.4.4",
     "testem": "^1.16.2"
   }
 }
