--- a/javascript/testem/package.json
+++ b/javascript/testem/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "mocha": "^3.4.2",
     "power-assert": "^1.4.4",
+    "requirejs": "^2.3.3",
     "testem": "^1.16.2"
   }
 }
