--- a/javascript/testem/package.json
+++ b/javascript/testem/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
     "mocha": "^3.4.2",
     "power-assert": "^1.4.4",
     "requirejs": "^2.3.3",
