run mocha with babel-register

--- a/javascript/testem/Makefile
+++ b/javascript/testem/Makefile
@@ -1,10 +1,14 @@
 .PHONY: test launchers
 
 TESTEM := $(shell npm bin)/testem
+MOCHA := $(shell npm bin)/mocha
 
 test:
 	$(TESTEM)
 
 launchers:
 	$(TESTEM) launchers
+
+mocha:
+	$(MOCHA) lib --recursive --compilers js:babel-register
 
