run testem through babel

--- a/javascript/testem/Makefile
+++ b/javascript/testem/Makefile
@@ -2,6 +2,7 @@
 
 TESTEM := $(shell npm bin)/testem
 MOCHA := $(shell npm bin)/mocha
+BABEL := $(shell npm bin)/babel
 
 test:
 	$(TESTEM)
@@ -12,3 +13,5 @@ launchers:
 mocha:
 	$(MOCHA) lib --recursive --compilers js:babel-register
 
+babel:
+	$(BABEL) lib --out-dir tmp
