--- a/javascript/testem/package.json
+++ b/javascript/testem/package.json
@@ -12,6 +12,7 @@
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
+    "bower": "^1.8.0",
     "mocha": "^3.4.2",
     "power-assert": "^1.4.4",
     "requirejs": "^2.3.3",
