--- a/javascript/ejs/with-gulp/package.json
+++ b/javascript/ejs/with-gulp/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ejs": "^2.5.6"
+    "ejs": "^2.5.6",
+    "gulp": "^3.9.1"
   }
 }
