--- a/javascript/ejs/with-gulp/package.json
+++ b/javascript/ejs/with-gulp/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "ejs": "^2.5.6",
     "gulp": "^3.9.1",
+    "gulp-ejs": "^3.0.1",
     "gulp-rename": "^1.2.2"
   }
 }
