--- a/javascript/ejs/with-gulp/package.json
+++ b/javascript/ejs/with-gulp/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "gulp ejs",
+    "watch": "gulp watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
