--- a/css/sanitize-css/package.json
+++ b/css/sanitize-css/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "sanitize.css": "^5.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "http-server": "^0.10.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
