--- a/css/sanitize-css/package.json
+++ b/css/sanitize-css/package.json
@@ -7,7 +7,8 @@
     "sanitize.css": "^5.0.0"
   },
   "devDependencies": {
-    "http-server": "^0.10.0"
+    "http-server": "^0.10.0",
+    "jquery": "^3.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
