add Makefile for example

--- a/morphological-analysis/jumanpp/Makefile
+++ b/morphological-analysis/jumanpp/Makefile
@@ -2,6 +2,7 @@
 
 DIR := $(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
 MAKE := $(shell which make)
+NPM_BIN := $(shell npm bin)
 
 install: update
 
@@ -18,3 +19,6 @@ check:
 	@type brew > /dev/null
 	@brew bundle check --file=$(DIR)/Brewfile
 	@brew bundle cleanup --file=$(DIR)/Brewfile
+
+run-sample:
+	$(MAKE) -C example sample
