--- a/javascript/three.js/package.json
+++ b/javascript/three.js/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "three-js": "^79.0.0"
+  }
 }
