--- a/javascript/three.js/package.json
+++ b/javascript/three.js/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack --watch",
+    "build": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "http-server": "^0.10.0",
-    "three-js": "^79.0.0"
+    "three-js": "^79.0.0",
+    "webpack": "^3.4.1"
   }
 }
