--- a/javascript/three.js/Makefile
+++ b/javascript/three.js/Makefile
@@ -8,6 +8,12 @@ update: setup
 	npm update
 	cp node_modules/three-js/three.js public/vendor/three-js/three.js
 
+watch:
+	npm run watch
+
+build:
+	npm run build
+
 setup:
 	mkdir -p public/vendor/three-js
 
