--- a/javascript/three.js/package.json
+++ b/javascript/three.js/package.json
@@ -17,5 +17,8 @@
     "http-server": "^0.10.0",
     "three-js": "^79.0.0",
     "webpack": "^3.4.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
