--- a/javascript/three.js/package.json
+++ b/javascript/three.js/package.json
@@ -14,7 +14,11 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.4",
     "http-server": "^0.10.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "three-js": "^79.0.0",
     "webpack": "^3.4.1"
   },
