--- a/javascript/three.js/package.json
+++ b/javascript/three.js/package.json
@@ -15,11 +15,13 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
     "http-server": "^0.10.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "three-js": "^79.0.0",
+    "url-loader": "^0.5.9",
     "webpack": "^3.4.1"
   },
   "dependencies": {
