--- a/javascript/three.js/package.json
+++ b/javascript/three.js/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.11.2",
     "http-server": "^0.10.0",
     "node-sass": "^4.5.3",
