--- a/javascript/three.js/package.json
+++ b/javascript/three.js/package.json
@@ -23,7 +23,8 @@
     "style-loader": "^0.18.2",
     "three-js": "^79.0.0",
     "url-loader": "^0.5.9",
-    "webpack": "^3.4.1"
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.2.0-rc.0"
   },
   "dependencies": {
     "d3": "^4.10.0",
