--- a/javascript/three.js/package.json
+++ b/javascript/three.js/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "watch": "webpack --watch",
     "build": "webpack -p",
+    "dev-server": "webpack-dev-server --inline",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
