fix package name

--- a/javascript/webpack/beginners-guide-to-webpack-2-and-module-bundling/package.json
+++ b/javascript/webpack/beginners-guide-to-webpack-2-and-module-bundling/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "try-three-js",
+  "name": "try-beginners-guide-to-webpack-2-and-module-bundling",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
