--- a/web/html5/localstorage/package.json
+++ b/web/html5/localstorage/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "mocha": "^3.4.2",
+    "power-assert": "^1.4.4",
+    "testem": "^1.16.2"
+  }
 }
