--- a/web/html5/localstorage/package.json
+++ b/web/html5/localstorage/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "mocha": "^3.4.2",
     "power-assert": "^1.4.4",
+    "sizeof": "^1.0.0",
     "testem": "^1.16.2"
   }
 }
