--- a/php/symfony/component/dom-crawler/composer.json
+++ b/php/symfony/component/dom-crawler/composer.json
@@ -8,6 +8,7 @@
     ],
     "require": {
         "symfony/dom-crawler": "^3.3",
-        "symfony/cache": "^3.3"
+        "symfony/cache": "^3.3",
+        "symfony/css-selector": "^3.3"
     }
 }
