--- a/language/go/mysql/docker/go/Dockerfile
+++ b/language/go/mysql/docker/go/Dockerfile
@@ -1,3 +1,7 @@
 FROM golang:1.9.2-alpine3.7
 
 RUN apk add --update git
+
+RUN go get github.com/go-sql-driver/mysql
+
+ENTRYPOINT tail -f /dev/null
