--- a/graphic/opengl/tutorial/008-glm/Makefile
+++ b/graphic/opengl/tutorial/008-glm/Makefile
@@ -1,6 +1,7 @@
 
 a.out:
-	gcc -framework GLUT -framework OpenGL -lc++11 main.cpp
+	# https://stackoverflow.com/questions/14228856/how-to-compile-c-with-c11-support-in-mac-terminal
+	clang++ -std=c++11 -stdlib=libc++ -framework GLUT -framework OpenGL main.cpp
 
 clean:
 	rm -rf a.out
