--- a/graphic/opengl/tutorial/008-glm/Makefile
+++ b/graphic/opengl/tutorial/008-glm/Makefile
@@ -1,7 +1,11 @@
+build: build/main build/sub
 
-a.out:
+build/%:
 	# https://stackoverflow.com/questions/14228856/how-to-compile-c-with-c11-support-in-mac-terminal
-	clang++ -std=c++11 -stdlib=libc++ -framework GLUT -framework OpenGL main.cpp
+	clang++ -std=c++11 -stdlib=libc++ -framework GLUT -framework OpenGL $(@F).cpp -o $(@F).o
 
-clean:
-	rm -rf a.out
+clean: clean/main clean/sub
+
+clean/%:
+	rm -rf $(@F).o
+
