--- a/sound/google-cloud-speech-api/docker-compose.yml
+++ b/sound/google-cloud-speech-api/docker-compose.yml
@@ -5,10 +5,14 @@ services:
     working_dir: /work
     volumes:
       - .:/work
+      - config:/root/.config
   
   mp3splt:
     build: docker/mp3splt
     working_dir: /work
     volumes:
       - .:/work
+
+volumes:
+  config:
 
