--- a/sound/google-cloud-speech-api/docker-compose.yml
+++ b/sound/google-cloud-speech-api/docker-compose.yml
@@ -15,6 +15,12 @@ services:
     volumes:
       - .:/work
 
+  sox:
+    build: docker/sox
+    working_dir: /work
+    volumes:
+      - .:/work
+
 volumes:
   config:
 
