--- a/sound/google-cloud-speech-api/docker-compose.yml
+++ b/sound/google-cloud-speech-api/docker-compose.yml
@@ -21,6 +21,12 @@ services:
     volumes:
       - .:/work
 
+  mecab:
+    build: docker/mecab
+    working_dir: /work
+    volumes:
+      - .:/work
+
 volumes:
   config:
 
