--- a/docker/symfony/docker-compose.yml
+++ b/docker/symfony/docker-compose.yml
@@ -7,11 +7,8 @@ services:
     ports:
       - 80:80
     volumes:
-      - type: volume
-        source: symfony
-        target: /web/symfony
-        volume:
-          nocopy: true
+      - .:/web/symfony
+
 
 volumes:
   symfony:
