--- a/docker/symfony/docker-compose.yml
+++ b/docker/symfony/docker-compose.yml
@@ -9,6 +9,12 @@ services:
     volumes:
       - .:/web/symfony
 
+  php:
+    image: php:7.2.5-fpm-alpine3.7
+    ports:
+      - 9000:9000
+    volumes:
+      - .:/web/symfony
 
 volumes:
   symfony:
