--- a/docker/symfony/docker-compose.yml
+++ b/docker/symfony/docker-compose.yml
@@ -11,6 +11,7 @@ services:
 
   php:
     image: php:7.2.5-fpm-alpine3.7
+    working_dir: /web/symfony
     ports:
       - 9000:9000
     volumes:
@@ -18,6 +19,7 @@ services:
 
   db:
     image: mysql
+    restart: always
     ports:
       - 3306:3306
     environment:
