--- a/docker/symfony/composer.json
+++ b/docker/symfony/composer.json
@@ -25,6 +25,7 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
+        "hirak/prestissimo": "^0.3.7",
         "symfony/browser-kit": "^4.0",
         "symfony/css-selector": "^4.0",
         "symfony/debug-pack": "*",
