--- a/javascript/crossroads/package.json
+++ b/javascript/crossroads/package.json
@@ -1,7 +1,10 @@
 {
   "name": "try-crossroads",
   "version": "0.0.0",
-  "main": "index.js",
+  "main": "index.mjs",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "crossroads": "^0.12.2"
+  }
 }
